--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,195 +5,306 @@ html,body{
 	color: white;
 }
 
-/* **************************| Nav Bar |**************************** */
-.sub-head{
-        background-color: #000022;
-        color: white;
-        padding-top: 5px;
-        padding-bottom: 5px;
-    }
+.top{
+	background-color: #141d26;
+}
+.top-content{
+	margin-left: 10% !important;
+	margin-right: 10% !important;
+}
 
-    .nav-link-txt{
-        color:white;
-        font-size: 17px;
-        margin-right: 25px;
-        /* font-weight: 500; */
-        /* background-color: aqua; */
-    }
-    .logo{
-        display: inline;
-        margin-left: 50px;
-        margin-right: 50px;
-    }
+.social img{
+	margin: 3px;
+	display: inline-flex;
+	align-items: center;
+	
+}
+.name p{
+	color: white;
+	font-weight: bold;
+	font-family: "Franklin Gothic Medium";
+	font-size: 30px;
+	text-align: center;
+}
+.search-input{
+	display: flex;
+	align-items: right;
+	justify-content: right;
+	width: 70% !important;
+	border-radius: 10px !important;
+	background-color: #141d26 !important;
+}
+.form-control{
+	
+	text-align: left;
+}
+.navbar-nav a{
+	padding-right: 50px !important;
+}
 
-    .logo img{
-        height: 45px;
-    }
+.hero{
+    margin-top: 20px;
+	height: 75vh;
+}
 
-    .nav-active {
-        color: orange;
-        border-bottom: 1px solid orange !important;
-    }
-    .nav-item a{
-        font-family: Arial, Helvetica, sans-serif;
-        text-decoration: none;
-        color: aliceblue;
-        border-bottom: 1px solid black;
-    }
+.left-side{
+    /* background-color: #e2a828; */
+    /* margin: 50px; */
+}
+.left-side-box{
+    margin: 0 40px;
+}
+.left-side-box:hover {
+    text-decoration: none;
+    background-color: rgba(20, 121, 20, 0.789);
+    color: white !important;
+}
+.left-side-middle-box{
+    margin: 42px 40px;
+}
+.left-side-middle-box:hover{
+    margin: 42px 40px;
+    background-color: rgba(20, 121, 20, 0.789);
+    color: white !important;
+}
 
-    .nav-item a:hover{
-        font-family: Arial, Helvetica, sans-serif;
-        text-decoration: none;
-        border-bottom: 1px solid  orange;
-    }
+.left-side-txt{
+    display: block;
+    text-align: center;
+    font-size: 1.1rem;
+}
+/* .left-side-txt:hover{
+    display: block;
+    text-align: center;
+    font-size: 1.1rem;
+    text-decoration: none;
+    color: white;
+} */
+.carousel-layout{
+    /* margin-top: 20px;
+	height: 65vh; */
+}
+.carousel-item{
+    border: 1px solid gray  ;
+    /* height: 80vh; */
+    /* box-shadow: 0px 2px 2px rgba(0,0,0,0.24); */
+}
 
+.book{
+    cursor: pointer;
+    margin-bottom: 27px;
+    height: 98%;
+}
+.momo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
 
-    .dropdown-menu{
-        /* margin-top: 5px; */
-        margin-left: -97.9vh;
-        /* margin-right: 100vh; */
-        background-color: #0c7ad0;
-        color: aliceblue;
-        text-align: center;
-    }
+    position: absolute;
+    top: 65%;
+    left: 40%;
+}
 
-    .sub-tab{
-        width: 250vh !important;
-    }
+.momo img{
+    border-radius: 4px;
+}
+.head-desc{
+	text-align: left;
+	background-color: #e2a828;
+	padding: 5px;
+}
+.caro-desc{
+	text-align: left;
+	font-size: 20px;
 
-    .search-input{
-        font-size: 15px;
-        border-radius: 45px;
-        color: white;
-        outline-style: none;
-        border: none;
-        /* margin-bottom: -30px; */
-        /* text-align: center; */
-    }
-    .search-btn{
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 15px; 
-        background-color: rgb(0, 195, 255);
-        padding:7px 16px 7px 16px;
-        color: white;
-        margin-top: -11px !important;
-        margin-left: 150px;
-        border-radius: 0px 45px 45px 0px;
-    }
+}
 
-    .sub-sech{
-        /* width: 0vh; */
-        /* text-align: center; */
+.caro-desc1{
+	background-color: black;
+	opacity: 0.8;
+	padding: 20px;
+	font-size: 20px;
+}
 
-    }
-    .search-box{
-        margin-top: 12px;
-        width: 33vh;
-        /* display: inline-block; */
-        /* display: flex;
-        justify-content: center;
-        align-items: center; */
-    }
+.section-title{
+	margin-top: 50px;
+    font-size: 2.5rem;
+	font-weight: bold;
+	font-family: "Franklin Gothic Medium"
+}
+.home-body{
+	margin-top: 20px;
+}
+.work-items{
+	background-color: white;
+	padding: 10px;
+	margin-top: 10px;
+	font-size: 20px;	
+	height: auto;
+	overflow: auto;
+	margin: 20px;
+}
+.home-body-about{
+	/* background-attachment: fixed; */
+}
+.work-section{
+	background-image: url('../images/IMG_4019.jpg');
+	background-size: cover;
+	height: auto;
+	overflow: auto;
+	background-attachment: fixed;
+	padding: 50px;
+}
+.others-section{
+	background:#e2a828;
+	height: auto;
+	padding: 50px;
+	background-attachment: fixed;
+}
+.about-items{
+	box-shadow: 0px 2px 2px rgba(0,0,0,0.24);
+}
+.about-items h5{
+	margin-top: 10px;
+}
+.about-text{
+	/* padding-top: 1px; */
+	/* text-align: center !important; */
+}
+.about-text{
+	font-size: 18px;
+    text-align:justify;
+    font-family: sans-serif;
+}
+.read-more{
+	background-color: #141d26; 
+	padding: 0 !important;	
+	margin: 0 !important;
+	color: white;
+}
 
-    .fa-search{
-        font-size: 22px;
-    }
-    
-    
+.img-container{
+		position: relative;
+		width: 50%;
+	}
 
-    
+	.middle{
+		transition: .5s ease;
+		opacity: 0;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		-ms-transform: translate(-50%, -50%);
+		text-align: center;
+	}
 
-    .hover-tab{
-        background-color: #0c7ad0;
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 16px;
-        margin-top: 10px;
-        /* margin-left: 350px; */
-    }
-    .dropdown-menu{
-        /* margin-top: 15px; */
-    }
+	.img-container:hover img{
+		opacity: 0.3;
+	}
 
+	.img-container:hover .middle{
+		opacity: 1;
+	}
 
-    .hover-link a{
-        margin-right: 40px;
-        font-size: 16px;
-        /* display: block; */
-        color: aliceblue;
-        border-bottom: 1px solid  #0c7ad0;
-    }
+	.text{
+		background-color: #141d26;
+		color: white;
+		font-size: 16px;
+		padding: 12px 22px;
+	}
+.box-txt{
+    text-align: center;
+    font-size: 1.1rem;
+}
+.box{
+	box-shadow: 0px 0px 1px 2px rgba(0,0,0,0.24);
+	padding: 25px 25px;
+	margin: 50px;
+    text-align: center;
+}
 
-/* ***********************************| Carousel |******************************** */
-.carousel-inner h2{
+.footer{
+	background-color: #141d26;
+	color: white;
+	padding-top: 20px;
+}
+
+.footer a{
+	text-decoration: none;
+	color: white
+}
+.books-outline{
+	
+	min-height: 150px;
+	box-shadow: 0px 2px 10px 1.5px rgba(0,0,0,0.24);
+	padding: 10px;
+	
+	
+}
+/*.books-outline:before{
+	position: relative;
+	transform-origin: right;
+	transition: 0.5s;
+	transform: scaleX(0);
+}*/
+
+.num{
+	background-color: #e2a828;
+	padding: 15px;
+	box-shadow: 0px 2px 10px 1.5px rgba(0,0,0,0.24);
+	color: white;
 	font-weight: bold;
 }
 
-.trinity{
-    /* color: rgb(179, 6, 6); */
-    font-weight: 900;
-    text-shadow: 2px 2px black;
-    /* background-color: black; */
-    width: 100% !important;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    /* border-radius: 75px; */
-    /* opacity: 0.7; */
+.num-journal{
+	background-color: #141d26;
+	padding: 15px;
+	box-shadow: 0px 2px 10px 1.5px rgba(0,0,0,0.24);
+	color: white;
+	font-weight: bold;
 }
 
-.slide-txt{
-    font-weight: 500;
-    font-size: 20px;
-}
-.foot-body{
-    /* display: inline; */
-    /* display: flex; */
-}
-
-.left-foot{
-    /* display: inline; */
-    /* text-align: right; */
-    margin-left: 300px;
-  /* justify-content: space-between; */
-}
-.right-foot{
-    /* display: inline; */
-    /* text-align: right; */
-    margin-left: 700px;
-    /* justify-content: flex-end; */
-    /* background-color: orange;
-    padding: 50px 50px 50px 20px; */
-}
-.footer{
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	background-color: black;
-	/*height: 12.9vh;*/
+.pub-title{
+	background-color: #e2a828;
+	padding: 15px;
+	color: white;
+	font-weight: bold;
+	margin-bottom: 50px;
 }
 
-.social{
-    background-color: #000681;
-    padding: 0px 0px 0px 100px;
+.jour-title{
+	background-color: #141d26;
+	padding: 15px;
+	color: white;
+	font-weight: bold;
+	margin-bottom: 50px;
 }
 
-  /* ************************| Footer |******************** */
-    .foot{
-        background-color:#001744;
-        color: aliceblue;
-    }
+.books-outline:hover{
+	background-color: #e2a828;	
+}
+.scholar{
+	background-image: url('images/IMG_4599.jpg');
+	background-size: cover;
+	height: auto;
+	overflow: hidden;
+	background-attachment: fixed;
 
-    .foot-txt{
-        font-size: 20px;
-        padding-top: 3px;
-        padding-bottom: 3px;
-    }
+}
 
-    .foot-logo{
-        margin-top: 4px;
-        padding-top: 3px;
-        padding-bottom: 3px;
-    }
+.project-outline{
+	box-shadow: 0px 2px 10px 1.5px rgba(0,0,0,0.24);
+	padding: 10px;
+	background-color: white;
+	opacity: 0.9;
+}
+
+.project-outline:hover{
+	opacity: 1;
+}
+
 
 /* sm */
 @media(min-width: 576px) and (max-width:767px){}
